test/type/fail/readln_undeclared.j
class A{
  Void main() {
    readln(a);
  }
}
